@@ -153,7 +153,8 @@
 (define-handler main-mode :configure-notify (window)
   (when (child-equal-p window *root*)
     (place-frames-from-xinerama-infos)
-    (show-all-children)))
+    (show-all-children)
+    (call-hook *root-size-change*)))
 
 
 (defun error-handler (display error-key &rest key-vals &key asynchronous &allow-other-keys)
